--- a/packages.config
+++ b/packages.config
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
-<packages xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+<packages xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <package id="CreateAR.Commons.Unity.Async" version="0.4.0" developmentDependency="false" />
+  <package id="CreateAR.Commons.Unity.DataStructures" version="0.1.0" developmentDependency="false" />
+  <package id="CreateAR.Commons.Unity.Logging" version="0.4.0" developmentDependency="false" />
+  <package id="CreateAR.Commons.Unity.Http" version="0.5.0" developmentDependency="false" />
+</packages>
