--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -98,7 +100,7 @@
       <HintPath>Assets\Plugins\Nuget\CreateAR.Commons.Unity.Http.0.5.1\lib\net35\CreateAR.Commons.Unity.Http.dll</HintPath>
     </Reference>
     <Reference Include="CreateAR.Commons.Unity.Logging">
-      <HintPath>Assets\Plugins\Nuget\CreateAR.Commons.Unity.Logging.0.4.1\lib\net35\CreateAR.Commons.Unity.Logging.dll</HintPath>
+      <HintPath>Assets\Plugins\Nuget\CreateAR.Commons.Unity.Logging.0.4.4\lib\net35\CreateAR.Commons.Unity.Logging.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +108,7 @@
     <Compile Include="Assets\Source\Application\Injection\InjectableMonoBehaviour.cs" />
     <Compile Include="Assets\Source\Application\Injection\InjectionExtensions.cs" />
     <Compile Include="Assets\Source\Application\Injection\SpirePlayerModule.cs" />
+    <Compile Include="Assets\Source\Graphics\Grid.cs" />
     <Compile Include="Assets\Source\Input\IInputManager.cs" />
     <Compile Include="Assets\Source\Input\IInputState.cs" />
     <Compile Include="Assets\Source\Input\IMultiInput.cs" />
@@ -115,7 +118,7 @@
     <Compile Include="Assets\Source\Main.cs" />
     <Compile Include="Assets\Source\States\Application.cs" />
     <Compile Include="Assets\Source\States\IApplicationState.cs" />
-    <Compile Include="Assets\Source\States\ViewportApplicationState.cs" />
+    <Compile Include="Assets\Source\States\EditApplicationState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
