Working out AssetReference.

--- a/spireplayer-unity.Editor.csproj
+++ b/spireplayer-unity.Editor.csproj
@@ -172,6 +172,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\Test\AssetManifest_Tests.cs" />
+    <Compile Include="Assets\Editor\Test\AssetReference_Tests.cs" />
+    <Compile Include="Assets\Editor\Test\DummyAssetLoader.cs" />
     <Compile Include="Assets\Editor\Test\TagResolver_Tests.cs" />
     <Compile Include="Assets\Editor\Build\UnityBuilder.cs" />
   </ItemGroup>
