--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -115,7 +115,9 @@
     <Compile Include="Assets\Source\Application\Injection\InjectionExtensions.cs" />
     <Compile Include="Assets\Source\Application\Injection\SpirePlayerModule.cs" />
     <Compile Include="Assets\Source\Application\Injection\Tags\MainCamera.cs" />
+    <Compile Include="Assets\Source\Asset\AssetInfo.cs" />
     <Compile Include="Assets\Source\Asset\AssetManifest.cs" />
+    <Compile Include="Assets\Source\Asset\AssetReference.cs" />
     <Compile Include="Assets\Source\Graphics\Grid.cs" />
     <Compile Include="Assets\Source\Input\IInputManager.cs" />
     <Compile Include="Assets\Source\Input\InputConfig.cs" />
