Added event + tests when asst has been added to manifest.

--- a/spireplayer-unity.Editor.csproj
+++ b/spireplayer-unity.Editor.csproj
@@ -171,6 +171,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Editor\Test\AssetManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\AssetManifest_Tests.cs" />
     <Compile Include="Assets\Editor\Test\AssetReference_Tests.cs" />
     <Compile Include="Assets\Editor\Test\DummyAssetLoader.cs" />
