--- a/spireplayer-unity.Editor.csproj
+++ b/spireplayer-unity.Editor.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -170,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\Build\UnityBuilder.cs" />
+    <Compile Include="Assets\Editor\Test\Asset\AssetManager_IntegrationTests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\AssetManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\AssetManifest_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\AssetReference_Tests.cs" />
