--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -102,6 +102,9 @@
     <Reference Include="CreateAR.Commons.Unity.Logging">
       <HintPath>Assets\Plugins\Nuget\CreateAR.Commons.Unity.Logging.0.4.5\lib\net35\CreateAR.Commons.Unity.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Assets\Plugins\Newtonsoft\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="spireplayer-unity.Plugins.csproj">
@@ -115,6 +118,7 @@
     <Compile Include="Assets\Source\Application\Injection\InjectionExtensions.cs" />
     <Compile Include="Assets\Source\Application\Injection\SpirePlayerModule.cs" />
     <Compile Include="Assets\Source\Application\Injection\Tags\MainCamera.cs" />
+    <Compile Include="Assets\Source\ApplicationStateData\ApplicationStateData.cs" />
     <Compile Include="Assets\Source\Asset\AssetInfo.cs" />
     <Compile Include="Assets\Source\Asset\AssetManager.cs" />
     <Compile Include="Assets\Source\Asset\AssetManagerConfiguration.cs" />
@@ -123,7 +127,9 @@
     <Compile Include="Assets\Source\Asset\IAssetLoader.cs" />
     <Compile Include="Assets\Source\Asset\IAssetManager.cs" />
     <Compile Include="Assets\Source\Asset\IAssetUpdateService.cs" />
+    <Compile Include="Assets\Source\Asset\Services\EditorAssetUpdateService.cs" />
     <Compile Include="Assets\Source\Asset\StandardAssetLoader.cs" />
+    <Compile Include="Assets\Source\Debug\Preview\PreviewOptionsBehaviour.cs" />
     <Compile Include="Assets\Source\Graphics\Grid.cs" />
     <Compile Include="Assets\Source\Input\IInputManager.cs" />
     <Compile Include="Assets\Source\Input\InputConfig.cs" />
@@ -136,8 +142,14 @@
     <Compile Include="Assets\Source\Input\States\Edit\EditRotateState.cs" />
     <Compile Include="Assets\Source\Input\States\EditModeInputState.cs" />
     <Compile Include="Assets\Source\Main.cs" />
+    <Compile Include="Assets\Source\Message\IMessageRouter.cs" />
     <Compile Include="Assets\Source\Message\MessageRouter.cs" />
     <Compile Include="Assets\Source\Message\MessageSubscriberGroup.cs" />
+    <Compile Include="Assets\Source\Messages\Application\PreviewAssetEvent.cs" />
+    <Compile Include="Assets\Source\Messages\MessageTypes.cs" />
+    <Compile Include="Assets\Source\Network\Asset\GetAssetManifestBody.cs" />
+    <Compile Include="Assets\Source\Network\Model\AssetModel.cs" />
+    <Compile Include="Assets\Source\Network\Response.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\FiniteStateMachine.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\IState.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\StateMachine.cs" />
@@ -146,8 +158,13 @@
     <Compile Include="Assets\Source\States\Preview\PreviewApplicationState.cs" />
     <Compile Include="Assets\Source\Util\CameraUtil.cs" />
     <Compile Include="Assets\Source\Util\IQueryResolver.cs" />
+    <Compile Include="Assets\Source\Util\JsonSerializer.cs" />
+    <Compile Include="Assets\Source\Util\MonoBehaviourBootstrapper.cs" />
     <Compile Include="Assets\Source\Util\Render.cs" />
     <Compile Include="Assets\Source\Util\StandardQueryResolver.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Plugins\Newtonsoft\net35\Newtonsoft.Json.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
