--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Assets\Source\Asset\StandardAssetLoader.cs" />
     <Compile Include="Assets\Source\Debug\Preview\PreviewOptionsBehaviour.cs" />
     <Compile Include="Assets\Source\Graphics\Grid.cs" />
+    <Compile Include="Assets\Source\Host\IApplicationHost.cs" />
     <Compile Include="Assets\Source\Input\IInputManager.cs" />
     <Compile Include="Assets\Source\Input\InputConfig.cs" />
     <Compile Include="Assets\Source\Input\InputManager.cs" />
@@ -142,20 +143,28 @@
     <Compile Include="Assets\Source\Input\States\Edit\EditRotateState.cs" />
     <Compile Include="Assets\Source\Input\States\EditModeInputState.cs" />
     <Compile Include="Assets\Source\Main.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\AuthorizedEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToHost\ApplicationReadyEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\FatalErrorEvent.cs" />
     <Compile Include="Assets\Source\Message\IMessageRouter.cs" />
     <Compile Include="Assets\Source\Message\MessageRouter.cs" />
     <Compile Include="Assets\Source\Message\MessageSubscriberGroup.cs" />
-    <Compile Include="Assets\Source\Messages\Application\PreviewAssetEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\PreviewAssetEvent.cs" />
     <Compile Include="Assets\Source\Messages\MessageTypes.cs" />
     <Compile Include="Assets\Source\Network\Asset\GetAssetManifestBody.cs" />
     <Compile Include="Assets\Source\Network\Model\AssetModel.cs" />
+    <Compile Include="Assets\Source\Network\Model\UserModel.cs" />
     <Compile Include="Assets\Source\Network\Response.cs" />
+    <Compile Include="Assets\Source\Network\User\CreateUserRequest.cs" />
+    <Compile Include="Assets\Source\Network\User\GetTokenBody.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\FiniteStateMachine.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\IState.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\StateMachine.cs" />
     <Compile Include="Assets\Source\States\Application.cs" />
-    <Compile Include="Assets\Source\States\EditApplicationState.cs" />
+    <Compile Include="Assets\Source\States\Edit\EditApplicationState.cs" />
+    <Compile Include="Assets\Source\States\InitializeApplicationState.cs" />
     <Compile Include="Assets\Source\States\Preview\PreviewApplicationState.cs" />
+    <Compile Include="Assets\Source\UI\Effects\Spinner.cs" />
     <Compile Include="Assets\Source\Util\CameraUtil.cs" />
     <Compile Include="Assets\Source\Util\IQueryResolver.cs" />
     <Compile Include="Assets\Source\Util\JsonSerializer.cs" />
@@ -166,6 +175,7 @@
   <ItemGroup>
     <None Include="Assets\Plugins\Newtonsoft\net35\Newtonsoft.Json.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
