--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Assets\Source\Application\Injection\SpirePlayerModule.cs" />
     <Compile Include="Assets\Source\Application\Injection\Tags\MainCamera.cs" />
     <Compile Include="Assets\Source\ApplicationStateData\ApplicationStateData.cs" />
+    <Compile Include="Assets\Source\Asset\AssetBundleLoader.cs" />
     <Compile Include="Assets\Source\Asset\AssetInfo.cs" />
     <Compile Include="Assets\Source\Asset\AssetManager.cs" />
     <Compile Include="Assets\Source\Asset\AssetManagerConfiguration.cs" />
@@ -146,14 +147,14 @@
     <Compile Include="Assets\Source\Input\States\Edit\EditRotateState.cs" />
     <Compile Include="Assets\Source\Input\States\EditModeInputState.cs" />
     <Compile Include="Assets\Source\Main.cs" />
-    <Compile Include="Assets\Source\Messages\ToApplication\AuthorizedEvent.cs" />
-    <Compile Include="Assets\Source\Messages\ToHost\ApplicationReadyEvent.cs" />
-    <Compile Include="Assets\Source\Messages\ToApplication\FatalErrorEvent.cs" />
     <Compile Include="Assets\Source\Message\IMessageRouter.cs" />
     <Compile Include="Assets\Source\Message\MessageRouter.cs" />
     <Compile Include="Assets\Source\Message\MessageSubscriberGroup.cs" />
-    <Compile Include="Assets\Source\Messages\ToApplication\PreviewAssetEvent.cs" />
     <Compile Include="Assets\Source\Messages\MessageTypes.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\AuthorizedEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\FatalErrorEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\PreviewAssetEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToHost\ApplicationReadyEvent.cs" />
     <Compile Include="Assets\Source\Network\Asset\GetAssetManifestBody.cs" />
     <Compile Include="Assets\Source\Network\Model\AssetModel.cs" />
     <Compile Include="Assets\Source\Network\Model\UserModel.cs" />
@@ -165,7 +166,7 @@
     <Compile Include="Assets\Source\Patterns\StateMachine\StateMachine.cs" />
     <Compile Include="Assets\Source\States\Application.cs" />
     <Compile Include="Assets\Source\States\Edit\EditApplicationState.cs" />
-    <Compile Include="Assets\Source\States\InitializeApplicationState.cs" />
+    <Compile Include="Assets\Source\States\Initialize\InitializeApplicationState.cs" />
     <Compile Include="Assets\Source\States\Preview\PreviewApplicationState.cs" />
     <Compile Include="Assets\Source\UI\Effects\Spinner.cs" />
     <Compile Include="Assets\Source\Util\CameraUtil.cs" />
@@ -178,7 +179,6 @@
   <ItemGroup>
     <None Include="Assets\Plugins\Newtonsoft\net35\Newtonsoft.Json.xml" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
