--- a/spireplayer-unity.Plugins.csproj
+++ b/spireplayer-unity.Plugins.csproj
@@ -88,9 +88,6 @@
     <Reference Include="Strange.Net35">
       <HintPath>Assets\Plugins\Lib\Strange\net35\Strange.Net35.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>Assets\Plugins\Newtonsoft\net35\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="CreateAR.Commons.Unity.DataStructures">
       <HintPath>Assets\Plugins\Nuget\CreateAR.Commons.Unity.DataStructures.0.1.0\lib\net35\CreateAR.Commons.Unity.DataStructures.dll</HintPath>
     </Reference>
@@ -103,6 +100,9 @@
     <Reference Include="CreateAR.Commons.Unity.Http">
       <HintPath>Assets\Plugins\Nuget\CreateAR.Commons.Unity.Http.0.6.0\lib\net35\CreateAR.Commons.Unity.Http.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Assets\Plugins\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Plugins\CreateAR\Debug\DebugRenderer.cs" />
@@ -112,7 +112,10 @@
     <Compile Include="Assets\Plugins\CreateAR\Debug\RenderContext2d.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Plugins\Newtonsoft\net35\Newtonsoft.Json.xml" />
+    <None Include="Assets\Plugins\JsonDotNet\Assemblies\AOT\Newtonsoft.Json.XML" />
+    <None Include="Assets\Plugins\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.XML" />
+    <None Include="Assets\Plugins\JsonDotNet\Assemblies\Windows\Newtonsoft.Json.XML" />
+    <None Include="Assets\Plugins\JsonDotNet\link.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
