Transition to Trellis.Messages dll.

--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="CreateAR.Commons.Unity.DataStructures" version="0.1.0" developmentDependency="false" />
   <package id="CreateAR.Commons.Unity.Logging" version="0.4.5" developmentDependency="false" />
   <package id="CreateAR.Commons.Unity.Http" version="0.6.0" developmentDependency="false" />
+  <package id="CreateAR.Trellis.Messages" version="0.1.8" developmentDependency="false" />
 </packages>
