Pulled out a binder to reduce duped code.

--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Assets\Source\Debug\Preview\PreviewOptionsBehaviour.cs" />
     <Compile Include="Assets\Source\Graphics\Grid.cs" />
     <Compile Include="Assets\Source\Host\ApplicationState.cs" />
+    <Compile Include="Assets\Source\Host\DataBinder.cs" />
     <Compile Include="Assets\Source\Host\EditorBridge.cs" />
     <Compile Include="Assets\Source\Host\IApplicationHost.cs" />
     <Compile Include="Assets\Source\Host\IApplicationState.cs" />
